Label and form action update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Start: Card -->
     <div class="card-contact">
       <h1 class="ms-2 mb-4">Contact Us</h1>
-      <form action="">
+      <form action="index.html">
         <div class="container-fluid p-0">
           <div class="row m-0">
 
@@ -44,7 +44,7 @@
               <span class="error-message d-none" id="lNameMess">This field is required</span>
             </div>
             <div class="col-md-12 mb-4">
-              <label class="form-label" for="fName">
+              <label class="form-label" for="uEmail">
                 Email Address<sup>*</sup>
               </label>
               <input class="form-input" type="email" name="uEmail" id="uEmail" required title="Email">
@@ -73,7 +73,7 @@
               <span class="error-message d-none" id="queryTypeMess">Please select a query type</span>
             </div>
             <div class="col-md-12 mb-4">
-              <label class="form-label" for="">
+              <label class="form-label" for="fMessage">
                 Message<sup>*</sup>
               </label>
               <textarea class="form-input" rows="3" name="fMessage" id="fMessage" title="Message" minlength="2" required></textarea>
